# rlwe

./: .gitignore  CMakeLists.txt  README.md  clean.sh
include/: CMakeLists.txt  fv.h  keccak-tiny.h  newhope.h  polyutil.h  sample.h  tesla.h
modules/: FindSodium.cmake
src/: CMakeLists.txt  defines.hpp  encoding.cpp  encryption.cpp  evaluation.cpp  fv.h  fv.hpp  fv_encode.cpp  fv_encoding.cpp  fv_encrypt.cpp  fv_encryption.cpp  fv_eval.cpp  fv_evaluation.cpp  fv_gen.cpp  fv_keygen.cpp  fv_params.cpp  keygen.cpp  newhope_exchange.cpp  newhope_gen.cpp  newhope_kex.cpp  newhope_params.cpp  newhope_util.cpp  polyutil.cpp  polyutil.h  random.cpp  rlwe.cpp  rlwe.hpp  sample.cpp  sample.h  sampling.cpp  sampling.hpp  tesla.h  tesla.hpp  tesla_encode.cpp  tesla_encoding.cpp  tesla_gen.cpp  tesla_keygen.cpp  tesla_params.cpp  tesla_sign.cpp  tesla_signing.cpp  (+3 more)
test/: CMakeLists.txt  test_addition.cpp  test_decrypt.cpp  test_encoding.cpp  test_encrypt.cpp  test_encryption.cpp  test_evaluation.cpp  test_fv_add.cpp  test_fv_addition.cpp  test_fv_encode.cpp  test_fv_encoding.cpp  test_fv_encrypt.cpp  test_fv_encryption.cpp  test_fv_hkeyex.cpp  test_fv_keyex_experimental.cpp  test_fv_keygen.cpp  test_fv_mult.cpp  test_fv_multiplication.cpp  test_gaussian_random.cpp  test_homomorphic_addition.cpp  test_homomorphic_keyex.cpp  test_homomorphic_multiplication.cpp  test_keyex_experimental.cpp  test_keygen.cpp  test_multiplication.cpp  test_newhope_kex.cpp  test_newhope_util.cpp  test_tesla_encode.cpp  test_tesla_sign.cpp  test_uniform_random.cpp
